<resources>
    <string name="app_name">Controle De Entrada Metha Systems</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Controle de Entradas Metha Systems</string>
    <string name="nav_header_subtitle">methasystems.com.br</string>
    <string name="nav_header_desc">Controle de Entradasr</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_lista">Fila</string>
    <string name="menu_reserva">Adicionar à fila</string>
    <string name="menu_cadastro">Cadastrar Cliente</string>
    <string name="menu_share">Reservas Antigas</string>
    <string name="menu_parametros">Parâmetros</string>
    <string name="action_sair">Fechar Aplicativo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_dados">Dados da Empresa</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="login">Favor entrar com sua conta</string>
    <string name="btnLogin">LOGIN</string>
    <string name="conta">Ainda não possui uma conta?</string>
    <string name="contato">Favor entre em contato com a Methasystems que criamos uma conta para você\nTel: (51)36324061\nEmail: emilia@methasystems.com.br</string>
    <string name="action_logoff">Sair (Logoff)</string>
    <string name="nav_dados">Dados da Empresa</string>
    <string name="bemVindo">Bem Vindo ao\\nApp de Controle de Entradas\\nMethasystems</string>
    <string name="txtIconeReserva">Icone Reserva</string>
    <string name="txtPessoas">Qtd Pessoas</string>
    <string name="txtNome">Nome Cliente</string>
    <string name="txtHora">00:00:00</string>
    <string name="txtStatus">Aguardando Chamado</string>
    <string name="txtEditar">Editar Reserva</string>
    <string name="txtDeletar">Deletar Reserva</string>
    <string name="txtConsultar">Consultar Reserva</string>
    <string name="txtChamar">Chamar Reserva</string>
    <string name="txtTituloDados">Dados de Cadastro</string>
    <string name="txtNomeDados">Nome</string>
    <string name="txtCnpjDados">CNPJ</string>
    <string name="txtEnderecoDados">Endereço</string>
    <string name="txtNumeroDados">Número</string>
    <string name="txtComplementoDados">Complemento</string>
    <string name="txtBairroDados">Bairro</string>
    <string name="txtCidadeDados">Cidade</string>
    <string name="txtUfDados">UF</string>
    <string name="txtCepDados">CEP</string>
    <string name="txtDescricaoDados">Descrição</string>
    <string name="txtHorarioDados">Horário de Funcionamento:</string>
    <string name="txtSegundaDados">Segunda</string>
    <string name="txtDasDados">Das:</string>
    <string name="txtAsDados">Às:</string>
    <string name="txtTercaDados">Terça</string>
    <string name="txtQuartaDados">Quarta</string>
    <string name="txtQuintaDados">Quinta</string>
    <string name="txtSextaDados">Sexta</string>
    <string name="txtSabadoDados">Sábado</string>
    <string name="txtDomingoDados">Domingo</string>
    <string name="txtEmailDados">Email</string>
    <string name="txtSenhaDados">Senha</string>
    <string name="txtNomeAdd">Nome do Cliente</string>
    <string name="txtQtdAdd">Quantidade de Pessoas</string>
    <string name="txtTelefoneAdd">Telefone Cliente</string>
    <string name="txtIdClienteAdd">Id Cadastro do Cliente</string>
    <string name="txtTituloAdd">Adicionar Fila</string>
    <string name="txtEmailClienteAdd">Email de Cadastro do Cliente</string>
    <string name="menu_antigas">Reservas Antigas</string>
    <string name="cadastro">Cadastrar Cliente</string>
    <string name="reativar">Reativar Reserva</string>
</resources>
