<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/txtIconeReserva"
        android:src="@drawable/ic_menu_reserva" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtNome"
                android:textColor="#000000"
                android:textSize="18sp"
                android:lines="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPessoas"
                android:layout_width="200dp"
                android:lines="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/txtPessoas"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHora"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="@string/txtStatus"
                android:textColor="#006400"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/imgConsultar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/txtConsultar"
                android:gravity="end"
                android:src="@android:drawable/ic_menu_search" />

            <ImageView
                android:id="@+id/imgDeletar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/txtDeletar"
                android:gravity="end"
                android:src="@android:drawable/ic_menu_delete" />

            <ImageView
                android:id="@+id/imgEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/txtEditar"
                android:gravity="end"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageView
                android:id="@+id/imgSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/txtChamar"
                android:gravity="end"
                android:src="@android:drawable/ic_menu_call" />

            <ImageView
                android:id="@+id/imgCorreto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/txtChamar"
                android:gravity="end"
                android:src="@android:drawable/ic_menu_send" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>