<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTituloAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/txtTituloAdd"
            android:textColor="#737373"
            android:textSize="25sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:onClick="onCheckBoxClicked"
            android:text="Cliente Cadastrado?"
            android:textColor="#737373"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnProcurar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_customizado"
            android:text="Procurar por Email"
            android:textColor="#FFFFFF"  />

        <TextView
            android:id="@+id/txtEmailClienteAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/txtEmailClienteAdd"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmailAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtNomeAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/txtNomeAdd"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNomeAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtQtdAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/txtQtdAdd"
            android:textColor="#737373"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editQtdAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtTelefoneAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/txtTelefoneAdd"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTelefoneAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:hint="(##)#####-####"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSalvarAdd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_customizado"
            android:text="Salvar Dados"
            android:textColor="#FFFFFF"  />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>